INT : correctif couleur contraste + ajout champs pagination

--- a/assets/css/_variable.scss
+++ b/assets/css/_variable.scss
@@ -14,6 +14,7 @@ $grey:					#B2B2B2;
 
 $grey-disabled:		    #595959;
 $grey-border:			#D9D9D9;
+$grey-lighter:          #E7E7E7;
 $grey-footer:			#E2E2E2;
 $grey-modal:			#F9F9F9;
 
