--- a/assets/css/components/_pagination.scss
+++ b/assets/css/components/_pagination.scss
@@ -61,6 +61,10 @@
 					color: $black;
 				}
 			}
+
+			&__input {
+				max-width: rem(90);
+			}
 		}	
 	}
 
